<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/white">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

        <RelativeLayout
            android:id="@+id/headtopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <!-- Title -->

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:fillColor="#FFFFFFFF"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"/>


        </RelativeLayout>



        <!-- Expandable Vision Statement Card -->
        <androidx.cardview.widget.CardView
            android:layout_below="@+id/headtopic"
            android:id="@+id/visionCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="8dp">

                <!-- Vision Statement Header -->
                <LinearLayout
                    android:id="@+id/visionHeaderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/visionTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Our Vision"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/visionArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:contentDescription="Expand Icon" />
                </LinearLayout>

                <!-- Vision Description Content -->
                <LinearLayout
                    android:id="@+id/visionContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:paddingStart="16dp">

                    <!-- Vision Description -->
                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/visionDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vision"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Expandable Mision Statement Card -->
        <androidx.cardview.widget.CardView
            android:layout_below="@+id/visionCardView"
            android:id="@+id/missionCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="8dp">

                <!-- Mission Statement Header -->
                <LinearLayout
                    android:id="@+id/missionHeaderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/missionTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="Our Mission"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/missionArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:contentDescription="Expand Icon" />
                </LinearLayout>

                <!-- Mission Description Content -->
                <LinearLayout
                    android:id="@+id/missionContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:paddingStart="16dp">

                    <!-- Mission Description -->
                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/missionDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mission"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Expandable Objective Statement Card -->
        <androidx.cardview.widget.CardView
            android:layout_below="@+id/missionCardView"
            android:id="@+id/objectiveCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="8dp">

                <!-- Objective Header -->
                <LinearLayout
                    android:id="@+id/objectiveHeaderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/objectiveTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Our Objective"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/objectiveArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:contentDescription="Expand Icon" />
                </LinearLayout>

                <!-- Objective Description Content -->
                <LinearLayout
                    android:id="@+id/objectiveContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:paddingStart="16dp">

                    <!-- Objective Description -->
                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/objectiveDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/objective"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Expandable Values Statement Card -->
        <androidx.cardview.widget.CardView
            android:layout_below="@+id/objectiveCardView"
            android:id="@+id/valuesCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="8dp">

                <!-- Values Header -->
                <LinearLayout
                    android:id="@+id/valuesHeaderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/valuesTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="Values"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/valuesArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:contentDescription="Expand Icon" />
                </LinearLayout>

                <!-- Values Description Content -->
                <LinearLayout
                    android:id="@+id/valuesContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:paddingStart="16dp">

                    <!-- Values Description -->
                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/valuesDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/values"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Expandable functions Statement Card -->
        <androidx.cardview.widget.CardView
            android:layout_below="@id/valuesCardView"
            android:id="@+id/functionsCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Functions Header -->
                <LinearLayout
                    android:id="@+id/functionsHeaderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/functionsTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="Functions"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/functionsArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:contentDescription="Expand Icon" />
                </LinearLayout>

                <!-- Functions Description Content -->
                <LinearLayout
                    android:id="@+id/functionsContentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:paddingStart="16dp">

                    <!-- Functions Description -->
                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/functionsDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/functions"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <ScrollView
            android:layout_below="@+id/functionsCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title -->
                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Vocational Training Authority of Sri Lanka (VTA)"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp" />

                <!-- Content -->
                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/aboutvta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutvta"
                    android:textSize="16sp"
                    android:lineSpacingExtra="8dp" />

            </LinearLayout>
        </ScrollView>





    </RelativeLayout>


</ScrollView>